# 3D-Visual-MOT

./: .gitmodules  Dockerfile  LICENSE  README.md  requirements.txt
cpp_ms_glmb_ukf/: CMakeLists.txt  README.md  setup.py
cpp_ms_glmb_ukf/src/: Filter.hpp  Model.hpp  Target.hpp  gibbs_multisensor.hpp  gm_adaptive_birth.hpp  kmeans.hpp  main.cpp  mc_adaptive_birth.hpp  meanShift.hpp  run_filter.hpp  utils.hpp
cpp_ms_glmb_ukf/src/lapjv/: lapjv.cpp  lapjv.h  lapjv_eigen.cpp
detection/cstrack/CMC1/: Cam_1.npz  Cam_2.npz  Cam_3.npz  Cam_4.npz
detection/cstrack/CMC2/: Cam_1.npz  Cam_4.npz
detection/cstrack/CMC4/: Cam_1.npz  Cam_2.npz  Cam_3.npz  Cam_4.npz
detection/fairmot/CMC1/: Cam_1.npz  Cam_2.npz  Cam_3.npz  Cam_4.npz
detection/fairmot/CMC2/: Cam_1.npz  Cam_2.npz  Cam_3.npz  Cam_4.npz
detection/fairmot/CMC3/: Cam_1.npz  Cam_2.npz  Cam_3.npz  Cam_4.npz
detection/fairmot/CMC4/: Cam_1.npz  Cam_2.npz  Cam_3.npz  Cam_4.npz
detection/fairmot/CMC5/: Cam_1.npz  Cam_2.npz  Cam_3.npz  Cam_4.npz
detection/fairmot/WILDTRACK/: Cam_5.npz
detection/fairmot/cmc/: cmc.json  cmc.train  cmc_CMC4.train  cmc_half.train  gen_labels_cmc.py
ms_glmb_ukf/: clearmot.py  demo.py  gen_meas.py  gen_model.py  ospa2.py  plot_results.py  run_filter.py  target.py
ms_glmb_ukf/cmc/: cam1_cam_mat.mat  cam2_cam_mat.mat  cam3_cam_mat.mat  cam3_cam_mat__.mat  cam4_cam_mat.mat  cam4_cam_mat__.mat
ms_glmb_ukf/results/: EST_CMC1_WORLD_CENTROID.txt
ms_glmb_ukf/wildtrack/: wildtrack.py
ms_glmb_ukf/wildtrack/calibrations/extrinsic/: extr_CVLab1.xml
